-----Etherate 0.8 Beta - 2016-03

[FEATURE] Added CLI arg -F to set max frames per second limit

[FEATURE] Set the default Ethertype for the Etherate payload frame to be 0xABCD for easy identification

[FEATURE] Added -L option to build an MPLS label stack and -E to specify LSR src/dst MAC

[FEATURE] Added -P option to add pseudowire control word to header stack

[MAJOR] Fixed issue with delay calculation not waiting and loop exceeding by 1

[MAJOR] Fixed issue with VLAN tag not being restored after build_headers()

[MINOR] Added MTU check to resolve MTU issues with QinQ

[MINOR] Fixed uninitialised value for IF_NAME

[MINOR] Fixed code, comment and documentation typos

[MINOR] Wrote the initial INSTALL file

add DEI option

MPLS labels


-----Etherate 0.7 Beta - 2015-10-10

[FEATURE] First draft of the link quality test is implemented

[MINOR] Added a pause on the RX host for the first test frame to come though (so the hosts are testing in sync)

[MINOR] I was a very naughty boy and used a goto, this has now been removed

[MINOR] Fixed code, comment and documenation typos



-----Etherate 0.6 Beta - 2015-09-13

[MAJOR] Rewrite to structs and functions to improve efficiency (major becasue this was 10G performance impacting)

[MAJOR] Moved to a TLV based header (major because this was 10G performance impacting)

[MAJOR] Added htonll() and ntohll() function (major becasue this was 10G performance impacting)

[MINOR] Fixed minor memory leaks

[MINOR] Removed most of the nasty global variables

[MINOR] Fixed code, comment and documentation typos

[MINOR] General code tidy up to improve readability

[MINOR] Fixed rounding and display errors when using -m and -M



-----Etherarte 0.5 Beta - 2015-07-11

[MINOR] Fixed MTU sweeps that are bigger than interface max MTU size

[MINOR] Add bigger delay averages to account for interrupt coalescing



-----Etherarte 0.4 Alpha - 2014-11-04
